--- a/Main.storyboard
+++ b/Main.storyboard
@@ -3018,12 +3018,29 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7gM-4z-c5Q">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qvW-Sx-uGE">
+                                        <rect key="frame" x="197" y="326" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="qvW-Sx-uGE" firstAttribute="centerY" secondItem="7gM-4z-c5Q" secondAttribute="centerY" id="ZuQ-zS-794"/>
+                                    <constraint firstItem="qvW-Sx-uGE" firstAttribute="centerX" secondItem="7gM-4z-c5Q" secondAttribute="centerX" id="r1R-g5-SMm"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="7gM-4z-c5Q" firstAttribute="centerY" secondItem="agY-MJ-sIF" secondAttribute="centerY" id="9yq-4J-io6"/>
+                            <constraint firstItem="7gM-4z-c5Q" firstAttribute="height" secondItem="agY-MJ-sIF" secondAttribute="height" id="DC4-yY-zAS"/>
                             <constraint firstItem="agY-MJ-sIF" firstAttribute="centerY" secondItem="b4G-Jm-n5c" secondAttribute="centerY" id="G3R-pH-DtQ"/>
                             <constraint firstItem="agY-MJ-sIF" firstAttribute="width" secondItem="b4G-Jm-n5c" secondAttribute="width" id="Yo2-n9-jYN"/>
                             <constraint firstItem="agY-MJ-sIF" firstAttribute="height" secondItem="b4G-Jm-n5c" secondAttribute="height" id="dhm-AO-r92"/>
+                            <constraint firstItem="7gM-4z-c5Q" firstAttribute="width" secondItem="agY-MJ-sIF" secondAttribute="width" id="sfL-Yq-iAo"/>
+                            <constraint firstItem="7gM-4z-c5Q" firstAttribute="centerX" secondItem="agY-MJ-sIF" secondAttribute="centerX" id="u6f-04-erK"/>
                             <constraint firstItem="agY-MJ-sIF" firstAttribute="centerX" secondItem="b4G-Jm-n5c" secondAttribute="centerX" id="z3t-Dm-htx"/>
                         </constraints>
                     </view>
@@ -3036,6 +3053,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="maskLoadingView" destination="7gM-4z-c5Q" id="9Qz-2a-E9Y"/>
                         <outlet property="webView" destination="agY-MJ-sIF" id="Uuh-wJ-zqh"/>
                     </connections>
                 </viewController>
