--- a/Main.storyboard
+++ b/Main.storyboard
@@ -3284,7 +3284,6 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="fHy-E2-ooq" secondAttribute="trailing" constant="-20" id="BRt-jl-AGO"/>
-                            <constraint firstItem="XMD-n7-rwN" firstAttribute="bottom" secondItem="Vyn-Up-GW6" secondAttribute="bottom" constant="49" id="FNB-bB-TDk"/>
                             <constraint firstItem="XMD-n7-rwN" firstAttribute="centerX" secondItem="hIX-vk-f6g" secondAttribute="centerX" id="Fbq-m0-71w"/>
                             <constraint firstItem="Vyn-Up-GW6" firstAttribute="top" secondItem="y7X-Xn-jjv" secondAttribute="bottom" id="K1r-Ah-m9h"/>
                             <constraint firstItem="fHy-E2-ooq" firstAttribute="centerX" secondItem="hIX-vk-f6g" secondAttribute="centerX" id="VPI-RL-jEv"/>
@@ -3294,6 +3293,7 @@
                             <constraint firstItem="Hew-wL-ecQ" firstAttribute="top" secondItem="Vyn-Up-GW6" secondAttribute="bottom" constant="49" id="nFl-9d-Erc"/>
                             <constraint firstItem="Vyn-Up-GW6" firstAttribute="width" secondItem="hIX-vk-f6g" secondAttribute="width" id="rj3-Md-ZFo"/>
                             <constraint firstItem="XMD-n7-rwN" firstAttribute="width" secondItem="hIX-vk-f6g" secondAttribute="width" id="uoq-a0-D0n"/>
+                            <constraint firstItem="Hew-wL-ecQ" firstAttribute="top" secondItem="XMD-n7-rwN" secondAttribute="bottom" id="vNe-GU-DpF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="L8q-Ur-XlX">
