--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1607,7 +1607,7 @@
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="threadTitle" destination="8Lv-dx-tHw" id="vMk-EN-IIJ"/>
-                                    <segue destination="Bhk-dY-41O" kind="show" id="wLO-He-BF0"/>
+                                    <segue destination="Bhk-dY-41O" kind="show" identifier="ZhanNeiSearchViewCell" id="wLO-He-BF0"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -3306,7 +3306,7 @@
         <image name="tab_new_post" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1YC-MX-JNu"/>
+        <segue reference="wLO-He-BF0"/>
         <segue reference="Ysv-Xy-VAF"/>
         <segue reference="FiC-V2-LqH"/>
         <segue reference="BtX-d5-2Dd"/>
